syntax = "proto3";

option csharp_namespace = "SzolgProg_vizsga";

service Book{
	rpc GetBooksById (BookLookupModel) returns (BookModel);
	rpc GetBooksByTitle (BookSearchModel) returns (stream BookModel);
	rpc DeleteBook (BookLookupModel) returns (AnswerModel);
	rpc EditBook (BookModel) returns (AnswerModel);
	rpc NewBook (BookModel) returns (AnswerModel);
	rpc BuyBook (BookLookupModel) returns (AnswerModel);
	rpc ImportBook (BookImportModel) returns (AnswerModel);
	rpc Login (UserModel) returns (AnswerModel);
	rpc Logout (UserModel) returns (AnswerModel);
}

message BookLookupModel{
	int32 id = 1;
	string user_token = 2;
	int32 number = 3;
}

message BookImportModel{
	int32 id = 1;
	int32 number = 2;
}

message BookSearchModel{
	string name = 1;
}

message AnswerModel{
	string message = 1;
	enum MessageType {
		OK = 0;
		ERROR = 1;
	}
	MessageType messageType = 2;
}

message UserModel{
	string token = 1;
}

message AuthorModel{
	int32 id = 1;
	string name = 2;
}

message GenreModel{
	int32 id = 1;
	string name = 2;
}

message PublisherModel{
	int32 id = 1;
	string name = 2;
}

message BookModel{
	int32 id = 1;
	string title = 2;
	string author = 3;
	string publisher = 4;
	string isbn = 5;
	string genre = 6;
	string description = 7;
	string publish_year = 8;
	int32 price = 9;
	int32 on_storage = 10;
	bool not_available = 11;
	string user_token = 12;
}